Fix for Bug: Organizations list table content is overflowing outside container #105 width of container and organization list is auto, scrollable and with auto margin. Reduced width of container to 90%.

--- a/src/organizations/Organization.css
+++ b/src/organizations/Organization.css
@@ -1,7 +1,7 @@
 .container-organizations {
     background: #f7f9fa;
     height: auto;
-    width: auto;
+    width: 90%;
     margin: 5em auto;
     overflow: scroll;
     -webkit-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.4);
